crates/reinhardt-pages/tests/ui/server_fnset/fail/missing_for.rs
use reinhardt_pages::server_fn::server_fnset;

struct Actions;

#[server_fnset]
impl Actions {}

fn main() {}
